# SerialServer-rust

./: .appveyor.yml  Cargo.toml  README.md  build.rs
src/: config.rs  error.rs  logger.rs  main.rs  server.rs
src/serial/: mod.rs  unix.c
